test/fail/generics/wrong_generic_type.lly
#[
SyntaxError: Function g, argument #1 is invalid:
Expected Type: A
Received Type: B
    from wrong_generic_type.lly:11
]#

# This isn't allowed because A and B may be incompatible types.
# Ex: A being an integer, B as a string.
define f[A, B](g: function (A), value: B) {
	g(value)
}
